--- a/src/welcomePage/style.css
+++ b/src/welcomePage/style.css
@@ -65,7 +65,8 @@ li {
   width: 100%;
 }
 .header nav .enterBtn button,
-.content #startBtn {
+#startBtn,
+#sectionOneBtn {
   padding: 8px 40px;
   border: none;
   outline: none;
@@ -77,7 +78,7 @@ li {
   transition: all 0.3s;
 }
 .header nav .enterBtn button:hover,
-.content #startBtn:hover {
+#startBtn:hover, #sectionOneBtn:hover {
   box-shadow: 0px 2px 5px #555;
 }
 
@@ -105,7 +106,7 @@ li {
 .content h1 {
   font-size: 4rem;
 }
-.content h1 span {
+.content h1 span, .sectionOne .imageContent h1 span , .sectionTwo .sectionTwoContent h1 span, .sectionThree h1 span{
   background: rgb(131, 58, 180);
   background: linear-gradient(
     90deg,
@@ -115,6 +116,7 @@ li {
   );
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
+  background-clip: text;
 }
 .content p {
   width: 95%;
@@ -190,7 +192,7 @@ li {
 .main .sectionOne {
   width: 100%;
   height: 100vh;
-  background-image: url(../../Assets/images/standOutBg.png);
+  background-image: url(../../Assets/images/HowToUse.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -210,23 +212,26 @@ li {
   justify-content: space-evenly;
 }
 .cardList .cardContent:nth-child(1) .card {
-  background-image: url(../../Assets/images/undraw_access_account_re_8spm.svg);
+  background-image: url(../../Assets/svg/undraw_access_account_re_8spm.svg);
 }
 .cardList .cardContent:nth-child(2) .card {
-  background-image: url(../../Assets/images/undraw_reviewed_docs_re_9lmr.svg);
+  background-image: url(../../Assets/svg/undraw_reviewed_docs_re_9lmr.svg);
 }
 .cardList .cardContent:nth-child(3) .card {
-  background-image: url(../../Assets/images/undraw_fill_form_re_cwyf.svg);
+  background-image: url(../../Assets/svg/undraw_fill_form_re_cwyf.svg);
 }
 .cardList .cardContent:nth-child(4) .card {
-  background-image: url(../../Assets/images/undraw_download_re_li50.svg);
+  background-image: url(../../Assets/svg/undraw_download_re_li50.svg);
 }
 .cardList .cardContent {
   width: calc(100% / 5);
   height: 22rem;
   padding: 5px 10px;
-  box-shadow: 0px 0px 8px #44444493;
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0px 0px 10px #5555556c;
   border-radius: 15px;
   display: flex;
   align-items: center;
@@ -243,13 +248,13 @@ li {
   position: absolute;
   top: 0;
   left: 0;
-} 
+}
 .cardList .cardContent h3 {
   font-size: 3.2rem;
   color: rgba(0, 0, 0, 0.9);
   z-index: 10;
   opacity: 0;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 .cardList .cardContent:hover .card {
   filter: blur(7px);
@@ -257,18 +262,140 @@ li {
 .cardList .cardContent:hover h3 {
   opacity: 1;
 }
-.sectionOne>h3 {
-  color: rgba(255, 255, 255, 0.7);
-  margin-top: 3rem;
-  font-size: 1.5rem;
-  text-align: center;
-  animation: blink 1s linear infinite alternate;
+#sectionOneBtn {
+  display: flex;
+  margin: 3rem auto;
+  padding: 15px 50px;
+  font-weight: bold;
+  letter-spacing: 1.2px;
 }
-@keyframes blink {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+
+/* section2 style is here  */
+
+.main .sectionTwo {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../../Assets/images/standOutBg.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 3rem 2rem;
+}
+.sectionTwo .sectionTwoImg img {
+  width: 25rem;
+  display: flex;
+  margin: auto;
+}
+.sectionTwo .sectionTwoContent {
+  width: 40rem;
+  margin: 3rem auto;
+  text-align: center;
+  color: #eeeeeeee;
+}
+.sectionTwoContent h1 {
+  font-size: 2.5rem;
+}
+.sectionTwoContent p {
+  margin-top: 2rem;
+}
+
+/* sectionThree style is here  */
+.main .sectionThree{
+  width: 100%;
+  height: 100vh;
+  background-image: url(../../Assets/images/twobgmain.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 3rem 2rem;
+}
+.sectionThree h1 {
+  font-size: 4rem;
+  color: rgba(0, 0, 0, 0.7);
+  text-align: center;
+  padding: 5px 10px;
+  background: rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  border-radius: 20px;
+}
+.sectionThree .packages {
+  width: 100%;
+  height: calc(100% - 6rem);
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.packages .basicPakage , .packages .primiumPakage {
+  height: 100%;
+  padding: 2rem;
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  border-radius: 20px;
+  transition: all .5s;
+}
+.packages .basicPakage {
+  background: linear-gradient(45deg, #9165ff, #B9B2FF);
+}
+.packages .primiumPakage {
+  background: linear-gradient(45deg, #ff00aa, #ff8af2);
+}
+.packages .active {
+  flex-basis: 75%;
+}
+.packages .unactive {
+  flex-basis: 20%;
+}
+.packages .unactive p, .packages .unactive h5, .packages .unactive ul, .packages .unactive button {
+  display: none;
+}
+.packages .unactive h2 {
+  writing-mode: vertical-lr;
+  margin-top: 3rem;
+}
+.packages h2 {
+  font-size: 3rem;
+}
+.packages p {
+  font-size: 16px;
+}
+.packages ul {
+  margin: 1rem 0 0 .5rem;
+}
+.packages ul li {
+  display: flex;
+  align-items: center;
+  margin-top: 7px;
+  font-weight: bold;
+}
+.packages img {
+  width: 2rem;
+  margin-right: 7px;
+}
+.packages img:nth-child(1) {
+  cursor: pointer;
+}
+.packages button {
+  margin-top: 2rem;
+  padding: 13px 50px;
+  font-size: 17px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 15px;
+  transition: .2s;
+}
+.packages button:hover {
+  box-shadow: 0px 2px 8px #555;
+  background: #eee;
+}
+.footer {
+  width: 100%;
+  height: 250px;
+  background-color: #010c61;
+  border-radius: 50px 50px 0 0;
+  color: #fff;
 }
