--- a/src/welcomePage/style.css
+++ b/src/welcomePage/style.css
@@ -16,16 +16,20 @@ ol,
 li {
   list-style: none;
 }
-
+body {
+  width: 100%;
+  height: auto;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+.header , .sectionOne, .sectionTwo , .sectionThree {
+  scroll-snap-align: start;
+}
 /* Style to the header section */
 
 .header {
   width: 100%;
   height: 100vh;
-  background-image: url(../../Assets/images/herobgmain.png);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 .header nav {
   width: 100%;
@@ -34,6 +38,10 @@ li {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  /* background: url(../../Assets/images/bg.png); */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .header nav #logo,
 .header nav .enterBtn {
@@ -64,6 +72,9 @@ li {
 .header nav .links ul li:hover::before {
   width: 100%;
 }
+.header nav .links ul li:first-child::before {
+  width: 100%;
+}
 .header nav .enterBtn button,
 #startBtn,
 #sectionOneBtn {
@@ -79,7 +90,7 @@ li {
 }
 .header nav .enterBtn button:hover,
 #startBtn:hover, #sectionOneBtn:hover {
-  box-shadow: 0px 2px 5px #555;
+  box-shadow: 0px 1px 5px #555;
 }
 
 /* Container style in header section  */
@@ -120,8 +131,10 @@ li {
 }
 .content p {
   width: 95%;
+  color: #5d646e;
 }
 .container .image {
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -145,7 +158,7 @@ li {
 .container .image .imageList .active {
   width: 23rem;
   filter: blur(0px);
-  box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.7);
 }
 .container .image button:nth-child(1) {
   position: absolute;
@@ -192,10 +205,6 @@ li {
 .main .sectionOne {
   width: 100%;
   height: 100vh;
-  background-image: url(../../Assets/images/HowToUse.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   padding: 3rem 2rem;
 }
 .main .sectionOne h1 {
@@ -224,7 +233,7 @@ li {
   background-image: url(../../Assets/svg/undraw_download_re_li50.svg);
 }
 .cardList .cardContent {
-  width: calc(100% / 5);
+  width: 17rem;
   height: 22rem;
   padding: 5px 10px;
   background: rgba(255, 255, 255, 0.3);
@@ -250,7 +259,7 @@ li {
   left: 0;
 }
 .cardList .cardContent h3 {
-  font-size: 3.2rem;
+  font-size: 3rem;
   color: rgba(0, 0, 0, 0.9);
   z-index: 10;
   opacity: 0;
@@ -275,10 +284,6 @@ li {
 .main .sectionTwo {
   width: 100%;
   height: 100vh;
-  background-image: url(../../Assets/images/standOutBg.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   padding: 3rem 2rem;
 }
 .sectionTwo .sectionTwoImg img {
@@ -290,34 +295,25 @@ li {
   width: 40rem;
   margin: 3rem auto;
   text-align: center;
-  color: #eeeeeeee;
 }
 .sectionTwoContent h1 {
   font-size: 2.5rem;
 }
 .sectionTwoContent p {
   margin-top: 2rem;
+  color: #5d646e;
 }
 
 /* sectionThree style is here  */
 .main .sectionThree{
   width: 100%;
   height: 100vh;
-  background-image: url(../../Assets/images/twobgmain.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   padding: 3rem 2rem;
 }
 .sectionThree h1 {
   font-size: 4rem;
-  color: rgba(0, 0, 0, 0.7);
   text-align: center;
   padding: 5px 10px;
-  background: rgba(255, 255, 255, 0.3);
-  -webkit-backdrop-filter: blur(4px);
-  backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.15);
   border-radius: 20px;
 }
 .sectionThree .packages {
@@ -331,9 +327,7 @@ li {
 .packages .basicPakage , .packages .primiumPakage {
   height: 100%;
   padding: 2rem;
-  -webkit-backdrop-filter: blur(4px);
-  backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0px 3px 5px #5555558e;
   border-radius: 20px;
   transition: all .5s;
 }
@@ -393,9 +387,42 @@ li {
   background: #eee;
 }
 .footer {
-  width: 100%;
-  height: 250px;
-  background-color: #010c61;
-  border-radius: 50px 50px 0 0;
-  color: #fff;
+  width: 99%;
+  height: 60px;
+  padding: 5rem 2rem;
+  margin: 2rem auto 2px auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0px 2px 7px #555555a2;
+  border-radius: 20px;
+}
+.fotterInfo, .mediaLinks{
+  flex-basis: 20%;
+}
+.footerLinks {
+  flex-basis: 50%;
+}
+.fotterInfo div {
+  display: flex;
+  align-items: center;
+  margin: 15px 0;
+}
+.fotterInfo div p {
+  margin-left: 15px;
+}
+.fotterInfo img {
+  width: 25px;
+}
+.mediaImg img {
+  width: 35px;
+  margin: 10px 5px;
+}
+.footerLinks {
+  line-height: 25px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.footerLinks ul a li {
+  font-size: 15px;
 }
