--- a/src/accounts/signup/style.css
+++ b/src/accounts/signup/style.css
@@ -19,11 +19,6 @@ li {
 body {
   width: 100%;
   height: auto;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-}
-.header , .sectionOne, .sectionTwo , .sectionThree {
-  scroll-snap-align: start;
 }
 /* Style to the header section */
 
@@ -38,7 +33,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* background: url(../../Assets/images/bg.png); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -72,4 +66,85 @@ body {
 }
 .header nav .links ul li:hover::before {
   width: 100%;
+}
+
+/* form styleing  */
+.main {
+  width: 100%;
+  height: calc(100vh - 66px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.main .form {
+  width: 550px;
+  height: 450px;
+  padding: 2rem 5rem;
+  box-shadow: 0px 4px 5px #e2e2e2;
+  border-radius: 8px;
+}
+.main .form form input, #form_btn{
+  width: 100%;
+  padding: .5rem 1rem;
+  margin-top: 1.5rem;
+  outline: none;
+  border: none;
+  box-shadow: 0px 2px 7px #eee;
+}
+/* .main .form form input:nth-child(5) */
+#form_btn
+ {
+  border: none;
+  outline: none;
+  background: #010c61;
+  color: #fff;
+  font-weight: 600;
+  height: 40px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: .5s;
+}
+#form_btn:hover {
+  box-shadow: 0px 2px 7px #666;
+}
+.main .form div {
+  position: relative;
+}
+.main .form form img {
+  width: 18px;
+  position: absolute;
+  right: 10px;
+  top: 34px;
+  cursor: pointer;
+  display: none;
+}
+.main .form p {
+  text-align: center;
+  margin-top: 20px;
+}
+.main .form p > a {
+  color: #00108a;
+  text-decoration: underline;
+}
+.form .wrongField {
+  color: red;
+  animation: vibrate .1s ease-out alternate;
+}
+.form .rightField {
+  color: green;
+}
+@keyframes vibrate {
+  0%{
+    transform: translateX(5px);
+  }
+  50%{
+    transform: translateX(0px);
+  }
+  100%{
+    transform: translateX(-5px);
+  }
+}
+.form .wrongField::placeholder {
+  color: red;
 }
