--- a/src/welcomePage/style.css
+++ b/src/welcomePage/style.css
@@ -19,11 +19,6 @@ li {
 body {
   width: 100%;
   height: auto;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-}
-.header , .sectionOne, .sectionTwo , .sectionThree {
-  scroll-snap-align: start;
 }
 /* Style to the header section */
 
@@ -90,7 +85,7 @@ body {
 }
 .header nav .enterBtn button:hover,
 #startBtn:hover, #sectionOneBtn:hover {
-  box-shadow: 0px 1px 5px #555;
+  box-shadow: 0px 2px 5px #929292;
 }
 
 /* Container style in header section  */
@@ -150,7 +145,7 @@ body {
 }
 .container .image img {
   width: 20rem;
-  border-radius: 7px;
+  border-radius: 10px;
   margin: 0 1rem;
   filter: blur(2px);
   transition: all 0.7s;
@@ -158,7 +153,7 @@ body {
 .container .image .imageList .active {
   width: 23rem;
   filter: blur(0px);
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 4px 8px #8b8b8b;
 }
 .container .image button:nth-child(1) {
   position: absolute;
@@ -240,7 +235,7 @@ body {
   -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0px 0px 10px #5555556c;
+  box-shadow: 0px 2px 8px 2px #eee;
   border-radius: 15px;
   display: flex;
   align-items: center;
@@ -327,7 +322,7 @@ body {
 .packages .basicPakage , .packages .primiumPakage {
   height: 100%;
   padding: 2rem;
-  box-shadow: 0px 3px 5px #5555558e;
+  box-shadow: 0px 2px 5px #a5a5a5;
   border-radius: 20px;
   transition: all .5s;
 }
@@ -383,19 +378,18 @@ body {
   transition: .2s;
 }
 .packages button:hover {
-  box-shadow: 0px 2px 8px #555;
+  box-shadow: 0px 1px 7px #686868;
   background: #eee;
 }
 .footer {
-  width: 99%;
+  width: 100%;
   height: 60px;
   padding: 5rem 2rem;
   margin: 2rem auto 2px auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  box-shadow: 0px 2px 7px #555555a2;
-  border-radius: 20px;
+  background: #eee;
 }
 .fotterInfo, .mediaLinks{
   flex-basis: 20%;
