--- a/src/welcomePage/style.css
+++ b/src/welcomePage/style.css
@@ -168,6 +168,7 @@ body {
   cursor: pointer;
   transition: 0.3s;
   z-index: 100;
+  display: none;
 }
 .container .image button:nth-child(3) {
   position: absolute;
@@ -381,6 +382,8 @@ body {
   box-shadow: 0px 1px 7px #686868;
   background: #eee;
 }
+
+/* footer styleing  */
 .footer {
   width: 100%;
   height: 60px;
