--- a/src/other/aboutUs/style.css
+++ b/src/other/aboutUs/style.css
@@ -19,11 +19,14 @@ li {
 body {
   width: 100%;
   height: auto;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
 }
-.header , .sectionOne, .sectionTwo , .sectionThree {
-  scroll-snap-align: start;
+.heroSection {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../../../Assets/images/CvAboutUs.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 /* Style to the header section */
 
@@ -95,4 +98,29 @@ body {
 .header nav .enterBtn button:hover,
 #startBtn:hover, #sectionOneBtn:hover {
   box-shadow: 0px 1px 5px #555;
+}
+
+/* main style is here  */
+.main {
+  width: 100%;
+  width: auto;
+  text-align: center;
+}
+.main h1 {
+  color: #010c61;
+  font-size: 3rem;
+}
+.main p {
+  margin: 1rem auto;
+  width: 30rem;
+}
+.mediaLinks {
+  width: 15rem;
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content: space-between;
+}
+.mediaLinks img {
+  width: 32px;
 }
