--- a/src/dashboard/style.css
+++ b/src/dashboard/style.css
@@ -51,27 +51,46 @@ body {
 }
 
 .header nav .UserAccount button {
-    padding: 5px 40px;
     border: none;
     outline: none;
-    border-radius: 10px;
     cursor: pointer;
     transition: all 0.3s;
+    background: transparent;
+    padding-right: 20px;
 }
-/* .hidden {
-    display: none;
-} */
-.UserAccountList {
-    width: 10rem;
-    height: 90px;
-    padding: .5rem 2rem;
+.accountInfo {
+    position: relative;
+}
+.UserAccountActive {
+    width: 13rem;
+    height: auto;
+    padding: 0.7rem 2rem;
     position: absolute;
-    bottom: -5.3rem;
-    right: 2rem;
+    top: 3.5rem;
+    right: .5rem;
+    transform: translate(0%, 0%);
     background: #eee;
+    border-radius: 10px;
+    box-shadow: 0px 3px 7px #999999cb;
+    transition: all .5s;
+} 
+.UserAccountActive ul li {
+    width: 100%;
+    height: 35px;
+    margin: 3px 0;
 }
-.UserAccountList ul li {
-    line-height: 25px;
+.UserAccounthidden {
+    padding: 0;
+    height: 0px;
+    overflow: hidden;
+}
+.UserAccountActive ul li:hover {
+    color: rgb(0, 183, 255);
+    text-decoration: underline;
+}
+.UserAccountActive ul li img {
+    width: 15px;
+    margin-right: 5px;
 }
 /* container styling is here  */
 .container {
@@ -85,11 +104,9 @@ body {
 .container .left_sidebar {
     flex-basis: 15%;
     height: 100%;
-    background-color: red;
 }
 
 .container .right_sidebar {
     flex-basis: 85%;
     height: 100%;
-    background: blue;
 }
