--- a/src/dashboard/style.css
+++ b/src/dashboard/style.css
@@ -112,16 +112,30 @@ body {
 
 /* left_sidebar style is here  */
 .container .left_sidebar {
-    flex-basis: 15%;
+    flex-basis: 16%;
     height: 100%;
+    box-shadow: 1px 0px #d8d8d8;
 }
 .ContentList {
-    width: 90%;
+    width: 100%;
+    height: 70%;
     margin: auto;
-    background: red;
+}
+.ContentList li {
+    margin: 2rem;
+    text-align: center;
+    padding: 0.5rem 0.6rem;
+    border-radius: 10px;
+    transition: all .3s;
+    cursor: pointer;
+}
+.ContentList li:hover {
+    box-shadow: 0px 0px 2px 2px #cdcdcd;
+    background: #010c61;
+    color: #fff;
 }
 /* right_sidebar style is here  */
 .container .right_sidebar {
-    flex-basis: 85%;
+    flex-basis: 84%;
     height: 100%;
 }
