--- a/src/dashboard/style.css
+++ b/src/dashboard/style.css
@@ -114,6 +114,8 @@ body {
 .container .left_sidebar {
     flex-basis: 16%;
     height: 100%;
+    display: flex;
+    flex-direction: colu
     box-shadow: 1px 0px #d8d8d8;
 }
 .ContentList {
@@ -122,7 +124,7 @@ body {
     margin: auto;
 }
 .ContentList li {
-    margin: 2rem;
+    margin: 1rem;
     text-align: center;
     padding: 0.5rem 0.6rem;
     border-radius: 10px;
@@ -133,6 +135,12 @@ body {
     box-shadow: 0px 0px 2px 2px #cdcdcd;
     background: #010c61;
     color: #fff;
+}
+.Extra {
+    width: 100%;
+    height: auto;
+    background-color: red;
+    padding: 1rem;
 }
 /* right_sidebar style is here  */
 .container .right_sidebar {
