--- a/src/dashboard/style.css
+++ b/src/dashboard/style.css
@@ -55,6 +55,19 @@ body {
 .UserAccount {
     cursor: pointer;
 }
+.accountInfo {
+    display: flex;
+    align-items: center;
+}
+.accountInfo button{
+    font-size: 25px;
+    margin-right: 2rem;
+    margin-top: 4px;
+    border: none;
+    outline: none;
+    background: transparent;
+    cursor: pointer;
+}
 .UserAccount img {
     width: 2.3rem;
     margin-right: 12px;
@@ -112,37 +125,91 @@ body {
 
 /* left_sidebar style is here  */
 .container .left_sidebar {
-    flex-basis: 16%;
+    flex-basis: 18%;
     height: 100%;
-    display: flex;
     box-shadow: 1px 0px #d8d8d8;
 }
 .ContentList {
     width: 100%;
-    height: 70%;
+    height: 44%;
     margin: auto;
 }
 .ContentList li {
     margin: 1rem;
     text-align: center;
     padding: 0.5rem 0.6rem;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: all .3s;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .ContentList li:hover {
-    box-shadow: 0px 0px 2px 2px #cdcdcd;
+    box-shadow: 0px 0px 7px #010c61ae;
     background: #010c61;
     color: #fff;
 }
+.ContentList li ion-icon {
+    margin-left: .5rem;
+}
 .Extra {
-    width: 100%;
+    width: 90%;
     height: auto;
-    background-color: red;
+    margin: auto;
+    background-image: url(../../Assets/images/exploreopportunities\ .png);
+    background-size: cover;
+    background-position: center;
     padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0px 2px 7px #777;
+}
+.Extra h3 {
+    font-size: 1.7rem;
+}
+.Extra p {
+    width: 100%;
+    margin-top: .3rem;
+}
+.Extra button {
+    width: 100%;
+    padding: .4rem .6rem;
+    border: none;
+    outline: none;
+    margin-top: .8rem;
+    cursor: pointer;
+    border-radius: 10px;
+    font-weight: bold;
+}
+.mediaLinks {
+    width: 95%;
+    margin: auto;
+    position: relative;
+    margin-top: .8rem;
+}
+.mediaLinks .mediaImg {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 1rem;
+}
+.mediaLinks .mediaImg img {
+    width: 30px;
 }
 /* right_sidebar style is here  */
 .container .right_sidebar {
-    flex-basis: 84%;
+    flex-basis: 82%;
     height: 100%;
+    padding: 2rem;
+}
+.container .right_sidebar p {
+    text-align: center;
+}
+.container .right_sidebar p img {
+    width: 35%;
+    margin: auto;
+}
+.container .right_sidebar h1 {
+    text-align: center;
+    margin-top: 2rem;
 }
