--- a/src/dashboard/style.css
+++ b/src/dashboard/style.css
@@ -155,9 +155,10 @@ body {
     width: 90%;
     height: auto;
     margin: auto;
-    background-image: url(../../Assets/images/exploreopportunities\ .png);
+    /* background-image: url(../../Assets/images/exploreopportunities\ .png);
     background-size: cover;
-    background-position: center;
+    background-position: center; */
+    background-image: linear-gradient(145deg, rgb(135 45 253), rgb(255 27 66));
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0px 2px 7px #777;
