--- a/src/dashboard/rightSide.css
+++ b/src/dashboard/rightSide.css
@@ -23,6 +23,7 @@ li {
     flex-basis: 82%;
     height: 100%;
     padding: 2rem;
+    box-shadow: inset 0px 2px 6px #eee;
 }
 .container .right_sidebar p {
     text-align: center;
@@ -37,7 +38,7 @@ li {
 }
 
 /* Contact Us styling  */
-.right_sidebar .container {
+.right_sidebar .ContactContainer {
     width: 100%;
     height: auto;
     padding: 5rem 6rem;
@@ -45,13 +46,13 @@ li {
     align-items: center;
     justify-content: center;
   }
-  .container .image , .container .form {
+  .ContactContainer .image , .ContactContainer .form {
     flex-basis: 50%;
   }
-  .container .image img {
+  .ContactContainer .image img {
     width: 300px;
   }
-  .container .form form input, form textarea {
+  .ContactContainer .form form input, form textarea {
     width: 100%;
     padding: .8rem 1rem;
     margin-bottom: 15px;
@@ -74,3 +75,70 @@ li {
     box-shadow: 0px 2px 8px #777;
   }
   
+  /* Resume Form styleing  */
+  .ResumeContainer {
+    width: 100%;
+    height: 100%;
+}
+.FormSteps {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 2rem;
+}
+.FormSteps button {
+  padding: 20px 27px;
+  outline: none;
+  border: none;
+  border-radius: 50%;
+  font-size: 17px;
+  cursor: pointer;
+  background: #eee;
+  transition: all .3s;
+}
+.FormSteps button:hover {
+  background: #010c61;
+  color: #fff;
+  box-shadow: 0px 1px 5px #010c61bb;
+}
+.resumeForm {
+  width: 90%;
+  margin: auto;
+  margin-top: 3rem;
+}
+.resumeForm fieldset {
+  padding: 1.9rem;
+}
+.resumeForm fieldset legend {
+  font-size: 26px;
+}
+.resumeForm fieldset input#firstName,.resumeForm fieldset input#lastName,.resumeForm fieldset input#userNumber,.resumeForm fieldset input#telNumber {
+  width: 44%;
+}
+.resumeForm fieldset input#lastName,.resumeForm fieldset input#telNumber {
+  margin-left: 10%;
+}
+.resumeForm fieldset input#jobRole,.resumeForm fieldset input#userEmail {
+  width: 98.8%;
+}
+.resumeForm fieldset input {
+  margin-top: 1.6rem;
+  padding: 10px 13px;
+  outline: none;
+}
+.resumeForm fieldset #Form1btn {
+  float: right;
+  margin-right: 1rem;
+  padding: 0.6rem 3rem;
+  background: #eee;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  transition: all .3s;
+}
+.resumeForm fieldset #Form1btn:hover {
+  background: #010c61;
+  color: #fff;
+  box-shadow: 0px 1px 5px #010c61bb;
+}
