--- a/src/dashboard/rightSide.css
+++ b/src/dashboard/rightSide.css
@@ -85,7 +85,7 @@ li {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding-top: 2rem;
+  padding-top: .8rem;
 }
 .FormSteps button {
   padding: 20px 27px;
@@ -105,7 +105,7 @@ li {
 .resumeForm {
   width: 90%;
   margin: auto;
-  margin-top: 3rem;
+  margin-top: 1.5rem;
 }
 .resumeForm fieldset {
   padding: 1.9rem;
