--- a/src/dashboard/rightSide.css
+++ b/src/dashboard/rightSide.css
@@ -128,7 +128,7 @@ li {
   outline: none;
   resize: none;
 }
-.resumeForm fieldset #Form1btn {
+.resumeForm fieldset #Form1btn, .resumeForm fieldset #Form2btn {
   float: right;
   margin-right: 1rem;
   padding: 0.6rem 3rem;
@@ -138,8 +138,14 @@ li {
   cursor: pointer;
   transition: all .3s;
 }
-.resumeForm fieldset #Form1btn:hover {
+.resumeForm fieldset #Form1btn:hover, .resumeForm fieldset #Form2btn:hover {
   background: #010c61;
   color: #fff;
   box-shadow: 0px 1px 5px #010c61bb;
+}
+.resumeForm input#universityName, input#degreeName {
+  width: 100%;
+}
+.resumeForm input#startYear, input#endYear {
+  width: 49.4%;
 }
