--- a/src/dashboard/rightSide.css
+++ b/src/dashboard/rightSide.css
@@ -113,12 +113,12 @@ li {
 .resumeForm fieldset legend {
   font-size: 26px;
 }
-.resumeForm fieldset input#firstName,.resumeForm fieldset input#lastName,.resumeForm fieldset input#userNumber,.resumeForm fieldset input#telNumber, 
-.resumeForm fieldset input#userJob, .resumeForm fieldset input#userAddress
+.resumeForm fieldset input#firstName,.resumeForm fieldset input#lastName,.resumeForm fieldset input#userNumber,.resumeForm fieldset input#userMail, 
+.resumeForm fieldset input#userJob, .resumeForm fieldset input#userAddress, .resumeForm fieldset input#companyName, .resumeForm fieldset input#companyJobRole
 {
   width: 44%;
 }
-.resumeForm fieldset input#lastName, .resumeForm fieldset input#userNumber, .resumeForm fieldset input#userAddress {
+.resumeForm fieldset input#lastName, .resumeForm fieldset input#userMail, .resumeForm fieldset input#userAddress, .resumeForm fieldset input#companyJobRole {
   margin-left: 10%;
 }
 .resumeForm fieldset input#jobRole,.resumeForm fieldset input#userEmail, .resumeForm fieldset textarea {
@@ -130,7 +130,7 @@ li {
   outline: none;
   resize: none;
 }
-.resumeForm fieldset #Form1btn, .resumeForm fieldset #Form2btn {
+.resumeForm fieldset #Form1btn, .resumeForm fieldset #Form2btn, #addExp, #Form3btn, #Form4btn, #Form5btn {
   float: right;
   margin-right: 1rem;
   padding: 0.6rem 3rem;
@@ -140,7 +140,12 @@ li {
   cursor: pointer;
   transition: all .3s;
 }
-.resumeForm fieldset #Form1btn:hover, .resumeForm fieldset #Form2btn:hover {
+#addExp:hover {
+  background: #01611e;
+  color: #fff;
+  box-shadow: 0px 1px 5px #01611ebb;
+}
+.resumeForm fieldset #Form1btn:hover, .resumeForm fieldset #Form2btn:hover, #Form3btn:hover, #Form4btn:hover, #Form5btn:hover {
   background: #010c61;
   color: #fff;
   box-shadow: 0px 1px 5px #010c61bb;
@@ -150,4 +155,120 @@ li {
 }
 .resumeForm input#startYear, input#endYear {
   width: 49.5%;
+}
+
+.checkbox-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.checkbox-group > * {
+  margin: 0.5rem 0.5rem;
+}
+
+.checkbox-group-legend {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #9c9c9c;
+  text-align: center;
+  line-height: 1.125;
+  margin-bottom: 1.25rem;
+}
+
+.checkbox-input {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.checkbox-input:checked + .checkbox-tile {
+  border-color: #010c61;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  color: #010c61;
+}
+.checkbox-input:checked + .checkbox-tile:before {
+  transform: scale(1);
+  opacity: 1;
+  background-color: #010c61;
+  border-color: #010c61;
+}
+.checkbox-input:checked + .checkbox-tile .checkbox-icon,
+.checkbox-input:checked + .checkbox-tile .checkbox-label {
+  color: #010c61;
+}
+.checkbox-input:focus + .checkbox-tile {
+  border-color: #010c61;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 0 0 4px #b5c9fc;
+}
+.checkbox-input:focus + .checkbox-tile:before {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.checkbox-tile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 9rem;
+  min-height: 2rem;
+  border-radius: 0.5rem;
+  border: 2px solid #b5bfd9;
+  background-color: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  transition: 0.15s ease;
+  cursor: pointer;
+  position: relative;
+}
+.checkbox-tile:before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 1.25rem;
+  height: 1.25rem;
+  border: 2px solid #b5bfd9;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 0.25rem;
+  left: 0.25rem;
+  opacity: 0;
+  transform: scale(0);
+  transition: 0.25s ease;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='192' height='192' fill='%23FFFFFF' viewBox='0 0 256 256'%3E%3Crect width='256' height='256' fill='none'%3E%3C/rect%3E%3Cpolyline points='216 72.005 104 184 48 128.005' fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round' stroke-width='32'%3E%3C/polyline%3E%3C/svg%3E");
+  background-size: 12px;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+.checkbox-tile:hover {
+  border-color: #010c61;
+}
+.checkbox-tile:hover:before {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.checkbox-icon {
+  transition: 0.375s ease;
+  color: #494949;
+}
+.checkbox-icon svg {
+  width: 3rem;
+  height: 3rem;
+}
+
+.checkbox-label {
+  color: #707070;
+  transition: 0.375s ease;
+  text-align: center;
 }
