--- a/src/dashboard/style.css
+++ b/src/dashboard/style.css
@@ -59,6 +59,19 @@ body {
     display: flex;
     align-items: center;
 }
+#massages {
+    position: relative;
+}
+#massages #massageNum {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: green;
+    position: absolute;
+    left: 16px;
+    top: 7px;
+    z-index: 10;
+}
 .accountInfo button{
     font-size: 25px;
     margin-right: 2rem;
@@ -67,6 +80,18 @@ body {
     outline: none;
     background: transparent;
     cursor: pointer;
+}
+#massageInfo {
+    width: 200px;
+    height: auto;
+    padding: 15px;
+    background-color: #eee;
+    position: absolute;
+    right: 20px;
+    font-size: 12px;
+}
+.inactiveMsg {
+    display: none;
 }
 .UserAccount img {
     width: 2.3rem;
@@ -96,7 +121,7 @@ body {
 .UserAccountActive ul li {
     width: 100%;
     height: 35px;
-    margin: 3px 0;
+    font-size: 14px;
 }
 .links {
     margin-top: .7rem;
@@ -110,7 +135,7 @@ body {
     text-decoration: underline;
 }
 .UserAccountActive ul li img {
-    width: 15px;
+    width: 11px;
     margin-right: 5px;
 }
 /* container styling is here  */
