--- a/src/other/aboutUs/style.css
+++ b/src/other/aboutUs/style.css
@@ -115,6 +115,12 @@ body {
   width: 30rem;
 }
 /*Here is Our team section */
+.teamtitle{
+  color: #010c61;
+  font-size: 3rem;
+  text-align: center;
+  font-weight: bold;
+}
 
 .teamSection{
   width: 100%;
@@ -127,6 +133,7 @@ body {
 
 .teamSection .card{
   padding: 2%;
+  padding-top: 0%;
   height: auto;
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -134,11 +141,26 @@ body {
   margin: auto;
   text-align: center;
 }
+
+.card .title{
+  color: grey;
+  font-size: 18px;
+}
+
+.card .desc{
+  font-size: 10px;
+}
+
 .teamsection .card a{
 text-decoration: none;
   font-size: 10px;
   color: black;
 
+}
+
+.card .media-icon img{
+  width: 20px;
+  margin: 10px 5px;
 }
 
 .teamSection .card .button{
@@ -152,6 +174,9 @@ border: none;
   cursor: pointer;
   width: 100%;
   
+}
+.button:hover, a:hover {
+  opacity: 0.7;
 }
 
 /* footer styleing  */
