signup page connect with database and working

--- a/src/accounts/signup/style.css
+++ b/src/accounts/signup/style.css
@@ -87,6 +87,7 @@ body {
   padding: 2rem 5rem;
   box-shadow: 0px 4px 5px #e2e2e2;
   border-radius: 8px;
+  position: relative;
 }
 .main .form form input, #form_btn{
   width: 100%;
@@ -151,4 +152,15 @@ body {
 }
 .form .wrongField::placeholder {
   color: red;
+}
+#emailError, p#passError {
+  position: absolute;
+  top: 0;
+  color: red;
+}
+p#passError {
+  margin-top: 0px;
+}
+.mailInactive, .passInactive {
+  display: none;
 }
