--- a/src/dashboard/rightSide.css
+++ b/src/dashboard/rightSide.css
@@ -301,3 +301,30 @@ li {
   border-radius: 10px;
   margin-left: 5px;
 }
+
+.sectionOne .imageContent h1 {
+  font-size: 2.7rem;
+}
+
+.sectionOne .imageContent h1 span{
+  background: rgb(131, 58, 180);
+  background: linear-gradient(90deg,
+      rgba(131, 58, 180, 1) 0%,
+      rgba(253, 29, 29, 1) 50%,
+      rgba(252, 176, 69, 1) 100%);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+.imageContent .cardList {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 3rem;
+}
+.card img {
+  width: 260px;
+  height: 360px;
+  border-radius: 10px;
+}
